Changes for PmsManagement, - Minor changes for user experience on admin view. - Fixed a bug causing the option slide to jump.

--- a/com.getshop.client/apps/PmsManagement/skin/PmsManagement.css
+++ b/com.getshop.client/apps/PmsManagement/skin/PmsManagement.css
@@ -263,9 +263,6 @@
     padding-right: 20px;
     cursor: pointer;
 }
-.PmsManagement .managementviewquickfilter .fa-lemon-o{
-    cursor: pointer;
-}
 .PmsManagement .managementviewquickfilter{
     box-sizing: border-box;
     position: relative;
